Corrige pie de figura en capítulo de radiación

--- a/libro/RadiacionSolar.tex
+++ b/libro/RadiacionSolar.tex
@@ -1028,8 +1028,8 @@ los mapas.
     \includegraphics[height=0.3\textheight]{../figs/TwoKrig}
   }
   \par\end{centering}
-\caption[Mapas de Radiación Efectiva]{Radiación Efectiva
-  anual($\si{\kilo\Wh\per\squared\meter}$) recibida por sistemas
+\caption[Mapas de Radiación Efectiva]{Radiación efectiva
+  anual ($\si{\kilo\Wh\per\meter\squared}$) recibida por sistemas
   estáticos, por sistemas de seguimiento con eje horizontal Norte-Sur
   y con seguimiento a doble eje. Los cálculos han sido realizados a
   partir de las bases de radiación SIAR \cite{SIAR2011} y CM~SAF
