Actualiza enlace nota interpretativa transformadores SFCR

--- a/libro/SFCR.tex
+++ b/libro/SFCR.tex
@@ -792,13 +792,6 @@ a la salida del rectificador existe componente de continúa que no
 es bloqueada por el transformador y, en caso de fallo del correspondiente
 control del inversor, puede ser inyectada indebidamente en la red.
 
-% La normativa vigente en España obliga al uso de un transformador de
-% aislamiento (o elemento equivalente) y por tanto descarta la utilización
-% de la opción 2. Este requerimiento puede interpretarse cómo una obligación
-% de utilizar un transformador situado en la salida del inversor (transformador
-% de baja frecuencia) y así garantizar la ausencia de componente de
-% continua en la red. 
-
 La normativa vigente en España obliga al uso de un transformador de
 aislamiento o elemento equivalente para cumplir tres objetivos:
 \begin{enumerate}
@@ -811,7 +804,7 @@ aislamiento o elemento equivalente para cumplir tres objetivos:
 Según la ``Nota de Interpretación Tecnica de la Equivalencia de la
 Separación Galvánica de la Conexión de Instalaciones Generadoras en
 Baja
-Tensión''\footnote{\url{http://www.f2i2.net/Documentos/PuntoInfoLSI/rbt/guias/REBT_Nota_interpretacion_separacion_galvanica.pdf}}
+Tensión''\footnote{\url{https://industria.gob.es/Calidad-Industrial/seguridadindustrial/instalacionesindustriales/baja-tension/notas/nota_interpretacion_separacion_galvanica.pdf}}
 los objetivos 1 y 2 se consiguen mediante la adecuada conexión de masas
 y tierras en el sistema (sección \ref{sec:puesta_tierra}). Para el
 objetivo 3 esta nota indica que ``la corriente continua inyectada en
